edit some minor layout issues and add favicon to all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ nav{
     text-decoration: none;
     color: #30313c;
     font-size: 4vw;
+    padding: 0 1vw;
 }
 
 #menu li {
